--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>오늘은 요기</title>
+        <title>페이지이름은미정</title>
         <link type="text/css" rel="stylesheet" href="css/test1.css">
 
     </head>
