--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     </style>
 
     <head>
+
+
+
         <meta charset="UTF-8">
+        <meta name="viewport" content="width==device-width, initial-scale=1.0">
         <title>페이지이름은 미정</title>
         <link type="text/css" rel="stylesheet" href="css/test1.css">
 
