--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
 
     <body>
 
-        <div class="MainTitle">
-            <p><img src="./img/Title.png" alt="">
-            </p>
-
+        <div class = "list">
+            <div class="MainTitle">
+                <p><img src="./img/Title.png" alt="">
+                </p>
+    
+            </div>
+    
         </div>
-
 
         <div class="map_random">
             <button>지도</button>
