--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         margin :0 auto;
     }
 
-    @media all and (min-width:450px) {
+    @media all and (max-width:800px) and (min-width:0px) {
     #wrap{
         width:30%;
         height: 75px;
@@ -34,7 +34,7 @@
     }
     }
 
-    @media all and (min-width:850px) {
+    @media all and (max-width:1600px) and (min-width:800px) {
     #wrap{
         width:743px;
         height : 117px;
