--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     @media all and (max-width:800px) and (min-width:0px) {
     #wrap{
-        width:30%;
+        width:160px;
         height: 75px;
         
         background:url(img/spoon.jpg)
@@ -28,8 +28,6 @@
     
     }
     }
-
-
 
 
 
