--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
         <title>페이지이름은 미정</title>
         <link type="text/css" rel="stylesheet" href="css/test1.css">
 
+        <script src="https://kit.fontawesome.com/3ac79e463e.js" crossorigin="anonymous"></script>
+
     </head>
 
     <body>
@@ -69,8 +71,12 @@
         <div class="sidebar">
 
             <center>
-                <div class="conbox con1"><a href="map"><span style="color:white">지도</span></a></div>
-                <div class="conbox con2"><a href="menu"><span style="color:white">메뉴추천</span></a></div>
+                <div class="conbox con1"><a href="한식"><span style="color:white">한식</span></a></div>
+                <div class="conbox con2"><a href="양식"><span style="color:white">양식</span></a></div>
+                <div class="conbox con3"><a href="중식"><span style="color:white">중식</span></a></div>
+                <div class="conbox con4"><a href="일식"><span style="color:white">일식</span></a></div>
+                <hr width = "88%" color = "white" size = "3">
+                <div class="conbox con5"><a href="list.html"><span style="color:white">게시판</span></a></div>
                 </center> 
        
         
@@ -79,8 +85,12 @@
            <!-- </ul>-->
         </div>
 
-        <div class="login"><a href="b.php"><span style="color:black">로그인</span></a></div>
-        <div class="join"><a href="a.php"><span style="color:black">회원가입</span></a></div>
+        <div class="login">
+            <a href="b.php"><i class="fa-regular fa-circle-user"></i></a><span style="color:black">로그인</span></a>
+        </div>
+        <div class="join">
+            <a href="a.php"><span style="color:black">회원가입</span></a>
+        </div>
 
         <div class="slidebox">
             <input type="radio" name="slide" id="slide01" checked>
