--- a/list.html
+++ b/list.html
@@ -58,8 +58,8 @@
                 </div>
             </div>
             <div class="board_page">
-                <a href="#" class="bt first"><<</a>
-                <a href="#" class="bt prev"><</a>
+                <a href="#" class="bt first"></a>
+                <a href="#" class="bt prev"></a>
                 <a href="#" class="num on">1</a>
                 <a href="#" class="num">2</a>
                 <a href="#" class="num">3</a>
@@ -79,4 +79,3 @@
 </html> 
 
 
-abc
