--- a/index.html
+++ b/index.html
@@ -73,14 +73,15 @@
         <div class="sidebar">
 
             <center>
-<<<<<<< HEAD
+
+
                 <div class="conbox con1"><a href="한식"><span style="color:white">한식</span></a></div>
                 <div class="conbox con2"><a href="양식"><span style="color:white">양식</span></a></div>
                 <div class="conbox con3"><a href="중식"><span style="color:white">중식</span></a></div>
                 <div class="conbox con4"><a href="일식"><span style="color:white">일식</span></a></div>
                 <hr width = "88%" color = "white" size = "3">
                 <div class="conbox con5"><a href="list.html"><span style="color:white">게시판</span></a></div>
-=======
+
 
                 <div class="conbox con1"><a href="map">지도</a></div>
                 <div class="conbox con2"><a href="menu">메뉴추천</a></div>
@@ -90,7 +91,6 @@
 
                 <div class="conbox con1"><a href="map"><span style="color:white">지도</span></a></div>
                 <div class="conbox con2"><a href="menu"><span style="color:white">메뉴추천</span></a></div>
->>>>>>> 9033f6a67cff7227f8cd38c984e08a87852fab6c
                 </center> 
        
         
@@ -101,10 +101,10 @@
         </div>
 
         <div class="login">
-            <a href="b.php"><i class="fa-regular fa-circle-user"></i></a><span style="color:black">로그인</span></a>
+            <a href="./php/b.php"><span style="color:black">로그인</span></a>
         </div>
         <div class="join">
-            <a href="a.php"><span style="color:black">회원가입</span></a>
+            <a href="./php/a.php"><span style="color:black">회원가입</span></a>
         </div>
 
         <div class="slidebox">
@@ -165,5 +165,3 @@
 </html>
 
 
-
-abc
