--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" user-scaleable="yes">
 
         <title>페이지이름은 미정</title>
-        <link type="text/css" rel="stylesheet" href="css/test1.css">
+        <link type="text/css" rel="stylesheet" href="../css/test1.css">
 
         <script src="https://kit.fontawesome.com/3ac79e463e.js" crossorigin="anonymous"></script>
 
@@ -76,7 +76,7 @@
                 <div class="conbox con3"><a href="중식"><span style="color:white">중식</span></a></div>
                 <div class="conbox con4"><a href="일식"><span style="color:white">일식</span></a></div>
                 <hr width = "88%" color = "white" size = "3">
-                <div class="conbox con5"><a href="list.html"><span style="color:white">게시판</span></a></div>
+                <div class="conbox con5"><a href="../list.html"><span style="color:white">게시판</span></a></div>
                 </center> 
        
         
@@ -86,10 +86,10 @@
         </div>
 
         <div class="login">
-            <a href="./login.html"><span style="color:black">로그인</span></a>
+            <a href="../login.html"><span style="color:black">로그인</span></a>
         </div>
         <div class="join">
-            <a href="./user_login.html"><span style="color:black">회원가입</span></a>
+            <a href="../user_login.html"><span style="color:black">회원가입</span></a>
         </div>
 
         <div class="slidebox">
