--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" user-scaleable="yes">
 
         <title>페이지이름은 미정</title>
-        <link type="text/css" rel="stylesheet" href="../css/test1.css">
+        <link type="text/css" rel="stylesheet" href="../../css/test1.css">
 
         <script src="https://kit.fontawesome.com/3ac79e463e.js" crossorigin="anonymous"></script>
 
